Updated AL-Go System Files

--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -1,5 +1,5 @@
 {
   "type": "AppSource App",
-  "templateUrl": "https://github.com/microsoft/AL-Go-AppSource@v3.2",
+  "templateUrl": "https://github.com/businesscentralapps/tmp17YIaM-AppSource@main",
   "MicrosoftTelemetryConnectionString": ""
 }
